# LIME-DE

./: .gitignore  Cargo.toml  README.md
config/: lime-native.toml  lime.toml
docs/: ARCHITECTURE.md  ROADMAP.md  cleanup_report.md  native_backend_plan.md
packaging/: lime-de-session  lime-de-tty@.service  lime.desktop
scripts/: arch_install_tty_service.sh  arch_run_tty.sh  arch_setup.sh  check_tty.sh  copy_to_drive.sh  export_project.sh  git_to_local.sh  install_tty_service.sh  local_to_git.sh  run_tty.sh  run_winit.sh  setup_lime_de.sh  sync.sh
src/: animation.rs  app.rs  backend.rs  client_buffer.rs  compositor.rs  config.rs  dock.rs  error.rs  input.rs  lib.rs  lime_ui.rs  main.rs  output.rs  panel.rs  render.rs  render_backend.rs  scene.rs  shader.wgsl  state.rs
src/backend/: mod.rs
src/backend/dev_winit/: mod.rs
src/backend/native/: drm.rs  egl.rs  event_loop.rs  gbm.rs  gles.rs  input.rs  mod.rs  output.rs  session.rs  udev.rs
src/core/: actions.rs  animation.rs  compositor.rs  layout.rs  mod.rs  rasterizer.rs  state.rs  window.rs
src/core/shell/: dock.rs  mod.rs  panel.rs  shell.rs
src/shell/: actions.rs  mod.rs  panel.rs  shell.rs
