[package]
name = "lime-de"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ctrlc = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
softbuffer = { version = "0.4.6", default-features = false, features = ["wayland", "wayland-dlopen"] }
smithay = { version = "0.7.0", default-features = false, features = ["wayland_frontend"] }
toml = "0.9.8"
winit = { version = "0.30.12", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }

[lints.rust]
unsafe_code = "deny"
